Added Update request status, Delete user functionalities

--- a/users/templates/users/requestForm.html
+++ b/users/templates/users/requestForm.html
@@ -5,6 +5,8 @@
     <div class="jumbotron">
       {% if created %}
         <h1>Request Has Been Created</h1>
+      {% elif updated %}
+        <h1>Request Has Been Updated</h1>
       {% else %}
         <h1>Request Form</h1>
         <h3>Just fill out the form.</h3>
