--- a/users/templates/users/convenor_dashboard.html
+++ b/users/templates/users/convenor_dashboard.html
@@ -6,16 +6,42 @@
 
 <br>
 
+<div class="row">
+<div class="col-md-6">
+    <h5>USER PROFILES</h5>
+    <hr>
+    <div class="card card-body">
+        <table class="table table-sm">
+            <tr>
+                <th>Name</th>
+                <th>Username</th>
+                <th>Email ID</th>
+            </tr>
+
+            {% for person in users %}
+                <tr>
+                    <td>{{person.name}}</td>
+                    <td>{{person.user.username}}</td>
+                    <td>{{person.user.email}}</td>
+                </tr>
+            {% endfor %}
+
+        </table>
+    </div>
+</div>
+
 	<div class="col-md-6">
 		<h5>REQUESTS</h5>
 		<hr>
 		<div class="card card-body">
-            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_request' req.id %}">Create Request</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Date Requested</th>
 					<th>Item</th>
+					<th>Member</th>
                     <th>Status</th>
+                    <th>Club</th>
+					<th>Update Status</th>
 				</tr>
 
 				{% for req in reqs %}
@@ -23,6 +49,9 @@
                         <td>{{req.timestamp_placed}}</td>
 						<td>{{req.item.name}}</td>
 						<td>{{req.member.name}}</td>
+						<td>{{req.status}}</td>
+                        <td>{{req.member.club}}</td>
+						<td><a class="btn btn-sm btn-info" href="{% url 'update_request' req.id %}">Update</a></td>
 					</tr>
 				{% endfor %}
 
@@ -30,7 +59,6 @@
 			</table>
 		</div>
 	</div>
-
 </div>
 
 <div class="row">
@@ -39,7 +67,7 @@
 		<h5>ITEMS</h5>
 		<hr>
 		<div class="card card-body">
-
+            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_item' %}">Add Item</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
