Added constraints in the forms

--- a/users/templates/users/convenor_dashboard.html
+++ b/users/templates/users/convenor_dashboard.html
@@ -67,7 +67,7 @@
 		<h5>ITEMS</h5>
 		<hr>
 		<div class="card card-body">
-            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_item' %}">Add Item</a>
+            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_item' memberProfile.club_id %}">Add Item</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
