--- a/users/templates/users/member_dashboard.html
+++ b/users/templates/users/member_dashboard.html
@@ -10,7 +10,7 @@
 		<h5>REQUESTS</h5>
 		<hr>
 		<div class="card card-body">
-            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_request' req.id %}">Create Request</a>
+            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_request' memberProfile.id %}">Create Request</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Date Requested</th>
