--- a/users/templates/users/member_dashboard.html
+++ b/users/templates/users/member_dashboard.html
@@ -2,7 +2,7 @@
 
 {% block body_block %}
 
-<h1> Hi, {{memberProfile}} of club {{memberProfile.club}}</h1>
+<h1> Hi {{memberProfile}}, Member of club {{memberProfile.club}}</h1>
 
 <br>
 
