--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,10 +2,15 @@
 {% block body_block %}
   <div class="container">
     <div class="jumbotron">
-      <h1>Login here :</h1>
+      <h2>Login</h2>
 <form method="post" action="{% url 'users:user_login' %}">
           {% csrf_token %}
           {# A more "HTML" way of creating the login form#}
+
+          {% if invalid %}
+                <p>Invalid Username or Password</p>
+          {% endif %}
+
           <label for="username">Username:</label>
           <input type="text" name="username" placeholder="Username">
 <label for="password">Password:</label>
