--- a/users/templates/users/itemForm.html
+++ b/users/templates/users/itemForm.html
@@ -11,7 +11,7 @@
         <form enctype="multipart/form-data" method="POST">
           {% csrf_token %}
           {{ item_form.as_p }}
-          <input type="submit" name="" value="Register">
+          <input type="submit" name="" value="Submit">
         </form>
 
       {% endif %}
