--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -4,15 +4,14 @@
   <div class="container">
     <div class="jumbotron">
       {% if registered %}
-        <h1>Thank you for registering!</h1>
+        <h3>Thank you for registering!</h3>
       {% else %}
-        <h1>Register Here</h1>
-        <h3>Just fill out the form.</h3>
+        <h3>Create User Profile</h3>
 <form enctype="multipart/form-data" method="POST">
           {% csrf_token %}
           {{ user_form.as_p }}
           {{ profile_form.as_p }}
-          <input type="submit" name="" value="Register">
+          <input type="submit" name="" value="Submit">
         </form>
 
       {% endif %}
