--- a/users/templates/users/requestForm.html
+++ b/users/templates/users/requestForm.html
@@ -13,7 +13,7 @@
         <form enctype="multipart/form-data" method="POST">
           {% csrf_token %}
           {{ request_form.as_p }}
-          <input type="submit" name="" value="Register">
+          <input type="submit" name="" value="Submit">
         </form>
 
       {% endif %}
